<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="common_btn_ok">OK</string>
    <string name="lbl_please_wait">Loading...</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="code">Code</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="enter_captcha">Enter value here</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have account</string>
    <string name="post">Post</string>
    <string name="attachments">Attachments</string>
    <string name="journal_details">Journal Details</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="none">None</string>
    <string name="select_team_and_friends">Select Team and Friends</string>
    <string name="select_message">Select Message</string>
    <string name="posted_in">posted in </string>
    <string name="posted_by">posted by </string>
    <string name="create_task">Create Task</string>
    <string name="create_task_list">Create Task List</string>
    <string name="create_event">Create Event</string>
    <string name="create_new_message">Create New Message</string>
    <string name="home_task">Home Task</string>
    <string name="home">Home</string>
    <string name="wall">Wall</string>
    <string name="blockmember">Block Member list</string>
    <string name="journal_list">Journal Listing</string>
    <string name="leave_list">Leave Application Listing</string>
    <string name="re_assignment_list">Reassignment Listing</string>
    <string name="re_assignment">REASSIGNMENT</string>
    <string name="assignment_list">Assignment Listing</string>
    <string name="journal_entry">New Journal Entry</string>
    <string name="leave_application">New Leave Application</string>
    <string name="create_sos">CREATE SOS</string>
    <string name="sos_updates">SOS Updates</string>
    <string name="my_sos">My SOS</string>
    <string name="received_sos">Received SOS</string>
    <string name="message">Message</string>
    <string name="announcements">Announcements</string>
    <string name="task_list">Task List</string>
    <string name="file_sharing">File Sharing</string>
    <string name="team_talk">Team Talk</string>
    <string name="platform_message">Platform Messages</string>
    <string name="supervisor_message">Supervisor Messages</string>
    <string name="calendar">Calendar</string>
    <string name="team_task">Team Task</string>
    <string name="mood">Mood</string>
    <string name="my_task">My Task</string>
    <string name="my_team">My Team</string>
    <string name="joined_team">Joined Team</string>
    <string name="my_consent">My Consent</string>
    <string name="complete_goal">Complete Goals</string>
    <string name="complete_goal_confirmation">Do you want to mark this goal as completed?</string>
    <string name="delete_goal_confirmation">Are you sure you want to delete this goal?</string>
    <string name="teams">My team</string>
    <string name="join">Join team</string>
    <string name="achieved">Achieved</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="self_care">Self Care</string>
    <string name="behavioural_survey">Behavioural Health Survey</string>
    <string name="notification">Notification</string>
    <string name="notification_filter">Notification Filter</string>
    <string name="team_invitation">Team Invitation</string>
    <string name="friend_invitation">Friend Invitation</string>
    <string name="appointment">Appointment</string>
    <string name="reviewer">Reviewer</string>
    <string name="uploader">Uploader</string>
    <string name="admin_approval">Admin Approval</string>
    <string name="admin_activity">Admin Activity</string>
    <string name="wall_post">Wall Post</string>
    <string name="deleting">Deleting</string>
    <string name="invitation">Invitation</string>
    <string name="invitation_status">Invitation Status</string>
    <string name="assessment_screner">Assessment Screener</string>
    <string name="daily_planner">Daily Planner</string>
    <string name="faq">FAQ</string>
    <string name="dashboard">Dashboard</string>
    <string name="feedback">Feedback</string>
    <string name="self_goal">Self Goal</string>
    <string name="select_image">Select Image</string>
    <string name="about_us">About Us</string>
    <string name="one_on_one">Friend</string>
    <string name="chat_room">Group</string>
    <string name="platform_usage_report">Platform Usage Report</string>
    <string name="peer_participant_report">Peer Participant Report</string>
    <string name="guest_report">Guest Report</string>
    <string name="process_outcomes_reports">Process Outcomes Report</string>
    <string name="self_goal_report">Self Goal Report</string>
    <string name="student_report">Student Report</string>
    <string name="goal_assignment">Goal Assignment</string>
    <string name="consumer_report">Consumer Report</string>
    <string name="approved_by">Approved by - </string>
    <string name="rejected_by">Rejected by - </string>
    <string name="shared_to">Shared to - </string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="approved">Approved</string>
    <string name="auto_approved">Auto Approved</string>
    <string name="shared">Shared</string>
    <string name="na">-- NA --</string>
    <string name="create_folder">Create Folder</string>
    <string name="inbox">inbox</string>
    <string name="draft">draft</string>
    <string name="outbox">outbox</string>
    <string name="trash">trash</string>
    <string name="compose">Compose</string>
    <string name="subject">Subject</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cc">Cc</string>
    <string name="time">Time</string>
    <string name="members">Members</string>
    <string name="success">Success</string>
    <string name="crisis">Crisis</string>
    <string name="support">Support</string>
    <string name="time_spent">Time Spent</string>
    <string name="from_colon">From:</string>
    <string name="to_colon">To:</string>
    <string name="cc_colon">Cc:</string>
    <string name="time_colon">Time:</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply All</string>
    <string name="folder">Folders</string>
    <string name="details">Details</string>
    <string name="download">Download</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="attending">Attending</string>
    <string name="not_attending">Not Attending</string>
    <string name="attended">Attended</string>
    <string name="forward">Forward</string>
    <string name="remove">Remove</string>
    <string name="removed">Removed</string>
    <string name="submit">Submit</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="meet">Meet</string>
    <string name="other">Other</string>
    <string name="email">Email</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="last">Last</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="select_unit">Select Unit</string>
    <string name="minute">Minute</string>
    <string name="hour">Hourly</string>
    <string name="date">Date</string>
    <string name="daily">Daily</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="my_goal">My Goals</string>
    <string name="add_goal">Add Goal</string>
    <string name="next">Next</string>
    <string name="all_goal">All Goals</string>
    <string name="running_goals">Running Goals</string>
    <string name="goal_name">Goal Name</string>
    <string name="goal_type">Goal Type</string>
    <string name="binary">Counting</string>
    <string name="non_binary">Yes/No</string>
    <string name="count">Count</string>
    <string name="frequency">Frequency</string>
    <string name="measurement_frequency">Measurement Frequency</string>
    <string name="impact_of_goal">Impact of Goal</string>
    <string name="milestone">Milestone</string>
    <string name="select_minutes">Select Minutes</string>
    <string name="select_hours">Select Hours</string>
    <string name="occurrences">Occurrences</string>
    <string name="definition">Definition</string>
    <string name="every">Every</string>
    <string name="every_weekday">Every Weekday</string>
    <string name="days">Day(s)</string>
    <string name="recur_every_week_on">Recur Every Week on :</string>
    <string name="of_every">of every</string>
    <string name="months">Month(s)</string>
    <string name="the">The</string>
    <string name="select_frequency">Select Frequency</string>
    <string name="journal">Journal</string>
    <string name="stats">Stats</string>
    <string name="social">Social</string>
    <string name="forbidden">Forbidden</string>
    <string name="read">Read</string>
    <string name="modify">Modify</string>
    <string name="admin">Admin</string>
    <string name="view">View</string>
    <string name="work">Work</string>
    <string name="assigned">Assigned</string>
    <string name="in_progress">In-Progress</string>
    <string name="on_hold">On Hold</string>
    <string name="completed">Completed</string>
    <string name="deferred_deactivated">Deferred / Deactivate</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="school">School</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="blogs">Blogs</string>
    <string name="courses">Courses</string>
    <string name="text_articles">Text Articles</string>
    <string name="intervention_tools">Intervention Tools</string>
    <string name="podcasts">Podcasts</string>
    <string name="webinar">Webinar</string>
    <string name="last_conversation">Last Conversation</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="worsening">Worsening</string>
    <string name="last_contacted">Last Contacted</string>
    <string name="assignment_txt">Are you sure, you want to add this assignment ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>
    <string name="select_location">Select Location</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="yearly">yearly</string>
    <string name="remember_me">Remember Me</string>
    <string name="click_here"><u>Click Here</u></string>
    <string name="motivation">Motivation</string>
    <string name="motivation_library">Motivation Library</string>
    <string name="wellness_toolkit">Wellness Toolkit</string>
    <string name="change_language">Change Language</string>
    <string name="Call_History">Call History</string>
    <string name="set_available_time">Set Available Time</string>
    <string name="blocked_member">Blocked Member</string>
</resources>