<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_location"
        android:title="@string/select_location"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_work"
        android:title="@string/work"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_school"
        android:title="@string/school"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_social"
        android:title="@string/social"
        app:showAsAction="ifRoom|withText" />
</menu>
