<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menu_block_member"
        android:title="@string/blocked_member"
        android:icon="@drawable/blue_close"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_change_language"
        android:title="@string/change_language"
        android:icon="@drawable/blue_close"
        app:showAsAction="always" />

    <item
        android:id="@+id/chatt_icon"
        android:icon="@drawable/blue_close"
        android:title="@string/last_conversation"
        app:showAsAction="always" />

    <item
        android:id="@+id/set_available_time"
        android:title="@string/set_available_time"
        android:visible="false"
        android:icon="@drawable/available_time_icon"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/call_history"
        android:title="@string/Call_History"
        app:showAsAction="ifRoom"
        />

</menu>
