<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textview_weekly"
            style="@style/CustomFontStylePrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_weight="0.25"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/weekly"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/textview_monthly"
            style="@style/CustomFontStylePrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_weight="0.25"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/monthly"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/textview_quarterly"
            style="@style/CustomFontStylePrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_weight="0.25"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/quarterly"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/textview_yearly"
            style="@style/CustomFontStylePrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/yearly"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_startdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/start_date"
            android:padding="7dp"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_tertiary" />

        <TextView
            android:id="@+id/textview_enddate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0.5"
            android:hint="@string/end_date"
            android:padding="7dp"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_tertiary" />
    </LinearLayout>

    <Button
        android:id="@+id/button_apply"
        style="@style/CustomFontStylePrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/apply"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16" />
</LinearLayout>