<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sos_action_dialog_fragment_layout"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:minWidth="250dp"
    app:cardCornerRadius="5dp"
    app:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_message"
                style="@style/CustomFontStylePrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:text="@string/assignment_txt"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_18" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_yes"
                    style="@style/CustomFontStyleSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />

                <Button
                    android:id="@+id/button_no"
                    style="@style/CustomFontStyleSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:background="@color/colorPrimary"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>